@@ -33,7 +33,7 @@ new_proj <- function(path, conName="qdacon",assignenv=.rqda,...){
       ## list of free codes
       dbGetQuery(con,"create table freecode  (name text, memo text,
                                               owner text,date text,dateM text,
-                                              id integer, status integer)")
+                                              id integer, status integer, color text)")
       if (dbExistsTable(con,"treecode")) dbRemoveTable(con, "treecode")
       ## tree-like strcuture of code (relationship between code and code-category[codecat])
       dbGetQuery(con,"create table treecode  (cid integer, catid integer
@@ -62,7 +62,7 @@ new_proj <- function(path, conName="qdacon",assignenv=.rqda,...){
       ##                                       memo text,BOM integer)")
       dbGetQuery(con,"create table project  (databaseversion text, date text,dateM text,
                                              memo text,about text)")
-      dbGetQuery(con,sprintf("insert into project (databaseversion,date,about,memo) values ('0.1.8','%s',
+      dbGetQuery(con,sprintf("insert into project (databaseversion,date,about,memo) values ('0.1.9','%s',
                             'Database created by RQDA (http://rqda.r-forge.r-project.org/)','')",date()))
       if (dbExistsTable(con,"cases")) dbRemoveTable(con, "cases")
       dbGetQuery(con,"create table cases  (name text, memo text,
@@ -111,7 +111,7 @@ UpgradeTables <- function(){
     ## journal table
     RQDAQuery("alter table project add column about text")
     dbGetQuery(.rqda$qdacon,"update project set about='Database created by RQDA (http://rqda.r-forge.r-project.org/)'")
-    dbGetQuery(.rqda$qdacon,"update project set databaseversion='0.1.8'")
+    dbGetQuery(.rqda$qdacon,"update project set databaseversion='0.1.9'")
     ## reset the version.
     ## added for version 0.1.8
     ## (no version 0.1.7 to make the version number consistent with RQDA version)
@@ -119,6 +119,7 @@ UpgradeTables <- function(){
     try(RQDAQuery("alter table attributes add column class text"),TRUE)
     RQDAQuery("alter table caseAttr add column status integer")
     RQDAQuery("alter table fileAttr add column status integer")
+    RQDAQuery("alter table freecode add column color text")
     RQDAQuery("update caseAttr set status==1")
     RQDAQuery("update fileAttr set status==1")
     try(RQDAQuery("create table annotation (fid integer,position integer,annotation text, owner text, date text,dateM text, status integer)"),TRUE)
@@ -128,16 +129,21 @@ UpgradeTables <- function(){
   if (currentVersion=="0.1.6"){
     RQDAQuery("alter table project add column about text")
     dbGetQuery(.rqda$qdacon,"update project set about='Database created by RQDA (http://rqda.r-forge.r-project.org/)'")
-    dbGetQuery(.rqda$qdacon,"update project set databaseversion='0.1.8'")
+    dbGetQuery(.rqda$qdacon,"update project set databaseversion='0.1.9'")
     RQDAQuery("alter table project add column imageDir text")
     try(RQDAQuery("alter table attributes add column class text"),TRUE)
     RQDAQuery("alter table caseAttr add column status integer")
     RQDAQuery("update caseAttr set status==1")
     RQDAQuery("alter table fileAttr add column status integer")
+    RQDAQuery("alter table freecode add column color text")
     RQDAQuery("update fileAttr set status==1")
     try(RQDAQuery("create table annotation (fid integer,position integer,annotation text, owner text, date text,dateM text, status integer)"),TRUE)
     RQDAQuery("create table image (name text, id integer, date text, dateM text, owner text,status integer)")
     RQDAQuery("create table imageCoding (cid integer,iid integer,x1 integer, y1 integer, x2 integer, y2 integer, memo text, date text, dateM text, owner text,status integer)")
+  }
+  if (currentVersion=="0.1.8"){
+    dbGetQuery(.rqda$qdacon,"update project set databaseversion='0.1.9'")
+    RQDAQuery("alter table freecode add column color text")
   }
 }
 
