@@ -1,3 +1,9 @@
+2009-10-16
+	* add argument to markRange and InsertAnchor to allow user-provided color.
+	* markCodeFun/ViewFileFun use code-specific color to highlight the code-mark.
+	* update project database structure.
+
+	
 2009-10-13
 	* fix bug in saveFUN4CaseAttr().
 	
